creata una guida

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,21 @@
             </ion-item>
           </ion-menu-toggle>
           
+          
+          
           <ion-menu-toggle auto-hide="false" (click)="inviaEmail()">
-            <ion-item lines="none" detail="false">
-              <ion-icon slot="start" [ios]="'mail-outline'" [md]="'mail-sharp'"></ion-icon>
+            <ion-item lines="none" detail="false" >
+              <ion-icon slot="start" [ios]="'mail'" [md]="'mail'"></ion-icon>
               <ion-label>Invia una segnalazione</ion-label>
             </ion-item> 
           </ion-menu-toggle>  
 
+          
+
+
+
+
+          
           <ion-menu-toggle auto-hide="false" (click)="logout()">
             <ion-item lines="none" detail="false">
               <ion-icon slot="start" [ios]="'exit-outline'" [md]="'exit-sharp'" ></ion-icon>
