Creata pagina di guida

--- a/src/app/pages/guida/guida.page.html
+++ b/src/app/pages/guida/guida.page.html
@@ -4,21 +4,183 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Guida al tuo acquario
+      <h6>Come allestire un acquario di acqua dolce</h6>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
-  <ion-list></ion-list>
-  
-<img class="my-background" src="assets/img/guidaacquario2.jpg" />
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-  
+
+  <ion-item>
     
+    <ion-label class="ion-text-wrap"> 
+    Allestire un’acquario non è un’operazione complessa come può sembrare. 
+    Per dare vita a un habitat accogliente per i pesci servono dedizione e attenzione, 
+    ma i passaggi da seguire sono relativamente pochi. Ecco come fare per realizzare un 
+    acquario di acqua dolce, che sia tropicale o di acqua fredda.
+    <img class="my-background" src="assets/img/imm1.jpg" />
+</ion-label>
+  </ion-item> 
+
+  <ion-item>
+    <ion-label class="ion-text-wrap"> 
+      Allestire un acquario per pesci è un'operazione che può richiedere attenzione e dedizione, 
+      ma è sicuramente alla portata di chiunque voglia appassionarsi a questo hobby. 
+      Di tipologie di acquari in realtà ne esistono molte: alcune sono più facili da allestire, 
+      altre invece richiedono di prendere in considerazione un numero decisamente più elevato di variabili.
+      Fortunatamente per dare vita a un acquario di acqua dolce — sia esso un acquario tropicale o un 
+      acquario di acqua fredda — le istruzioni da seguire sono relativamente poche. Si comincia con la scelta 
+      della posizione dell'acquario, per proseguire con l'acquisto della vasca più adatta e iniziare con 
+      l'allestimento vero e proprio: dalla sistemazione di fertilizzante e ghiaia a quella di piante e rocce, 
+      per arrivare agli impianti tecnici e infine all'inserimento dei pesci. Ecco la guida a come allestire un 
+      acquario passo per passo.
+</ion-label>
+
+  </ion-item> 
+
+  <ion-item>
+    <ion-label class="ion-text-wrap"> 
+<h1>1. Scegliere la posizione e la base dell'acquario</h1> 
+<img class="my-background" src="assets/img/imm2.webp" />
+</ion-label>
+</ion-item> 
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+    Prima di allestire l'acquario è fondamentale decidere dove posizionarlo e da questo punto di vista 
+    assicurarsi di almeno tre aspetti. Il primo è che la posizione scelta sia in prossimità di una presa 
+    di corrente, dal momento che l'acquario dovrà fare affidamento su sistemi di filtraggio e illuminazione 
+    che avranno bisogno di un allaccio alla rete elettrica per funzionare. La vasca deve inoltre essere al 
+    riparo dalla luce diretta del sole, per evitare il proliferare incontrollato di alghe all'interno: 
+    meglio evitare dunque la prossimità delle finestre. L'acquario deve infine avere una base stabile sulla 
+    quale risiedere, e non basta che il piano d'appoggio sia a livello con il pavimento. La vasca finirà infatti 
+    col pesare tanti chili quanti sono i litri d'acqua che contiene, senza contare il peso aggiuntivo di rocce, 
+    piante e pesci: il tavolo o il mobile scelto deve poter reggere questo peso, meglio ancora se si tratta di 
+    supporti progettati espressamente per ospitare un acquario.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>2. Scegliere la vasca giusta</h1> 
+<img class="my-background" src="assets/img/imm3.webp" />
+In vendita esistono acquari di tutte le tipologie, divisi per dimensioni in centimetri e capienza in litri. 
+Le dimensioni della vasca del resto sono fondamentali e andrebbero scelte in considerazione delle dimensioni,
+della tipologia e del numero di pesci che si desidera inserire all'interno, tenendo però in considerazione 
+alcuni aspetti. Innanzitutto una vasca più piccola può paradossalmente risultare più difficile da gestire: 
+in un ambiente più ristretto e con meno acqua a disposizione infatti i parametri dell'habitat sono soggetti
+a cambiare in modo più repentino, danneggiando i pesci. La vasca dovrebbe inoltre essere dotata di impianti 
+di filtraggio e illuminazione, per fare in modo che l'ambiente non diventi presto tossico per i pesci: questi 
+dispositivi possono essere venduti insieme alla vasca o acquistabili separatamente. In fase di acquisto 
+dell'acquario occorrerà dunque assicurarsi di questo aspetto.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>3. Sistemare la ghiaia e riempire la vasca</h1> 
+<img class="my-background" src="assets/img/imm4.webp" />
+Una volta acquistata la vasca è necessario prepararla per gli ospiti che arriveranno.
+Il primo elemento del quale occuparsi è ovviamente la base dell'acquario, ovvero il fondo 
+fertile che costituisce la porzione di nutrienti della quale andranno a cibarsi le piante vive dell'acquario. 
+Sopra questo strato va poi posizionata la ghiaia — ovvero la base che ancorerà le piante al suolo — non prima 
+però di averla lavata accuratamente. Una volta sistemati questi elementi è possibile iniziare a riempire
+parzialmente la vasca con acqua tiepida, ponendo una piastra o una pentola sulla ghiaia per evitare che 
+i due substrati si rimescolino per via dell'ingresso dell'acqua.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>4. Posizionare rocce e piante</h1> 
+<img class="my-background" src="assets/img/imm5.webp" />
+Solo ora è possibile posizionare le piante, dal momento che queste non possono rimanere al di 
+fuori dell'ambiente acquatico per troppo tempo. Con la vasca già parzialmente piena, le piante 
+acquatiche si possono estrarre dal loro recipiente e posizionare a piacimento e in tutta tranquillità 
+nell'acquario, facendo in modo che le radici affondino bene nella ghiaia e magari disponendo le piantine 
+più piccole in primo piano e le più voluminose sul retro per metterle in mostra tutte. Anche per 
+la disposizione delle rocce decorative occorre utilizzare senso pratico: gli elementi naturali dell'acquario, 
+se posizionati accuratamente, serviranno anche a nascondere elementi tecnici fondamentali al benessere 
+dei pesci ma decisamente antiestetici, come l'impianto di trattamento dell'acqua.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h2>4.1. Come scegliere le piante per l'acquario</h2> 
+Chiaramente in caso si scelgano piante sintetiche non c'è bisogno di alcun tipo di cura nel 
+disporle né del substrato fertilizzante sotto alla ghiaia. Chi non desidera confrontarsi con questo 
+aspetto della gestione dell'acquario potrebbe dunque preferire questa tipologia di decorazione, 
+disponibile in plastica lavabile o in seta, più raffinata e sicura per il pesce.
+
+Le piante vere però non sono solamente ornamentali, ma svolgono una funzione utile per i pesci 
+sottraendo l'anidride carbonica che producono per restituire ossigeno. La loro presenza inoltre 
+contrasta la formazione di alghe, rendendo l'habitat più piacevole da osservare. 
+Una soluzione di compromesso per i principianti può essere quella di privilegiare piantine resistenti 
+che non hanno bisogno di particolari livelli di manutenzione.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>5. Posizionare rocce e piante</h1> 
+<img class="my-background" src="assets/img/imm6.jpg" />
+Posizionate piante e rocce è il momento di riempire l'acquario fino all'orlo e accendere gli impianti
+ di illuminazione e filtraggio, due elementi dalla funzione decisamente importante. L'illuminazione artificiale, 
+ posizionata subito sotto al coperchio, sopperisce all'assenza di luce solare diretta (che scalando
+  l'acqua risulterebbe dannosa), e fa inoltre in modo che anche i pesci e le piante più vicini alla 
+  superficie ricevano la corretta dose di luce. Il filtraggio dal canto suo ripulisce l'acqua dalle 
+  impurità e dalle sostanze tossiche espulse dai pesci, che se presenti a concentrazioni elevate possono 
+  metterne a rischio la salute.
+
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h2>5.1. Come scegliere le luci per l'acquario</h2> 
+L'illuminazione corretta ha un particolare effetto sulla visibilità all'interno dell'acquario, 
+ma soprattutto aiuta i pesci a sintonizzarsi su un ciclo sonno-veglia stabile e influisce positivamente 
+sulla salute delle piante e sul loro proliferare a scapido delle alghe. Per questi ultimi due motivi non 
+esiste un impianto di illuminazione perfetto per tutte le occasioni, ma la scelta deve essere ponderata 
+considerando la tipologia di pesci in vasca (possono essere più o meno abituati alla luce) e delle piante.
+
+I watt per litro d'acqua sono una misura dell'intensità dell'illuminazione di un dato impianto, mentre i
+ gradi Kelvin esprimono indirettamente la gradazione di colore emessa dalle lampade. Per l'illuminazione
+  ideale vanno presi in considerazione entrambi questi valori, mentre la tipologia di illuminazione 
+  scelta può ricadere tranquillamente sui LED: affidabili, a basso consumo e spesso a intensità e 
+  temperatura di colore regolabile.
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>6. Lasciare che le piante mettano radici</h1> 
+<img class="my-background" src="assets/img/imm7.jpg" />
+L'acquario è praticamente pronto, eppure non è ancora il momento di inserire i pesci.
+ Anzi, gli inquilini designati dovranno aspettare almeno un paio di settimane prima di poter 
+ sguazzare nella loro nuova dimora. L'ambiente subacqueo ha infatti bisogno di stabilizzarsi 
+ per evitare che questo avvenga mentre i pesci sono all'interno e risentano di eventuali cambiamenti 
+ repentini. Il discorso vale anche all'opposto: le piante hanno bisogno di rafforzare il legame tra le 
+ radici e il fondale per evitare che pesci troppo curiosi le sradichino dal terreno al primo passaggio.
+
+
+</ion-label>
+</ion-item> 
+
+<ion-item>
+  <ion-label class="ion-text-wrap"> 
+<h1>7. Introdurre i pesci</h1> 
+<img class="my-background" src="assets/img/imm8.webp" />
+È il momento. Il fondale è immobile, le piante sono stabili nel terreno, l'arredamento è in posizione, 
+l'impianto di filtraggio è acceso e ben impostato, l'illuminazione funziona a dovere e la temperatura 
+dell'acqua è stabile alla temperatura corretta: i pesci possono finalmente fare il loro ingresso nell'acquario.
+ Per farlo occorre però abituarli al nuovo ambiente: l'ideale può essere inserire il sacchetto chiuso nel
+  quale sono custoditi all'interno della vasca, per acclimatare l'animale. Dopo una ventina di minuti è
+   possibile aprire il sacchetto per versare al suo interno uno o più bicchieri d'acqua proveniente 
+   dall'acquario, e infine trasferire i pesci nella vasca.
+</ion-label>
+</ion-item> 
+
+
 
 </ion-content>
